apps/beans-and-bites/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: backend
    spec:
      volumes:
      - name: media-storage
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: backend
        volumeMounts:
        - mountPath: /app/media
          name: media-storage
        image: ghcr.io/novog93/beans-and-bites/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
