apps/beans-and-bites/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/novog93/beans-and-bites/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: beans-and-bites-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
