apps/beans-and-bites/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beans-and-bites-http
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - beans-and-bites-gateway.novotny.live
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: beans-and-bites-service
          port: 80
